# daq_ui

./: CMakeLists.txt  CMakeUserPresets.json  build_debug_64.bat  build_run_32.bat  build_run_64.bat  conanfile.py  config.txt  imgui.ini  output.txt  prompt.txt
profile/: build  host_64  host_debug_64
src/: main.cpp
src/lib/: calibrate.h  daq.c  daq.h  daq_ui.cpp  daq_ui.h
test/: CC_test.c  class.cpp  config.py  dll_test.py  hello.c  main_v1.c  parse_test1.c  read_data.tdms  read_data.txt  read_test.py  server.py  server_1.py  spinner_server.c  spinner_server.h  stream_v1.c  stream_v1.h  stream_v2.c  stream_v2.h  test.c
